<resources>
    <string name="app_name">新松物联-SR</string>
    <string name="more_operation">More </string>
    <string name="current_version">Version name: </string>
    <string name="finish_date">Finish date: </string>
    <string name="about_soft">About sotf </string>
    <string name="cancle">Cancel</string>
    <string name="please_press_again_exit">Press back key again, exit</string>
    <string name="basic_search">Basic search card</string>
    <string name="m1">M1</string>
    <string name="cpu">CPU</string>
    <string name="psam">PSAM</string>
    <string name="iso15693">15693</string>
    <string name="start_search_card">Start search</string>
    <string name="stop_search_card">Stop search</string>
    <string name="clear">Clear</string>


    <string name="no_card_search">No card search</string>
    <string name="please_search_card">please search card , try again</string>
    <string name="sn">SN</string>
    <string name="uid">UID</string>
    <string name="card_type">Card type</string>
    <string name="count">Count</string>
    <string name="sector">Sector</string>
    <string name="block">Block</string>
    <string name="password_a">Key A</string>
    <string name="password_b">Key B</string>
    <string name="password">Password</string>
    <string name="readData">Read data</string>
    <string name="writeData">Write data</string>
    <string name="auth">Auth</string>
    <string name="findcard">Search card</string>
    <string name="read">Read</string>
    <string name="write">Write</string>
    <string name="exit">Exit</string>>
    <string name="please_input_right_key">please input right keys</string>
    <string name="device_exception">Device exception</string>
    <string name="auth_success">Auth success</string>
    <string name="auth_fail">Auth fail</string>
    <string name="please_auth">please auth</string>
    <string name="read_fail">Read fail</string>
    <string name="read_success">Read success</string>
    <string name="please_16_byte">please input 16 bytes HEX data</string>
    <string name="write_success">Write success</string>
    <string name="write_fail">Write fail</string>
    <string name="findCardCount">Card count:</string>
    <string name="selectCardUID">Select card:</string>
    <string name="blocks">Blocks:</string>
    <string name="singleBlockLen">single block Len:</string>
    <string name="selectBlock">select block:</string>
    <string name="getCardInfo">get card info</string>

    <string name="search_card_fail">search card fail or no card</string>
    <string name="please_input_right_data">please input 4bytes HEX data </string>
    <string name="register_code_info">register code:</string>
    <string name="android_id_info">android ID:</string>

    <string name="serialport">Serial port:</string>
    <string name="buadrate">Baud rate:</string>
    <string name="power">Power:</string>
    <string name="set">Set</string>
    <string name="settings">Settings</string>
    <string name="set_success">set success</string>
    <string name="postSymbol">post Symbol</string>
    <string name="postValue">0D0A</string>

</resources>

